fixed the spacing between images

--- a/css/main.css
+++ b/css/main.css
@@ -674,6 +674,7 @@ a img{
 .img-flex{
 	max-width:100%;
 	height:auto;
+	display:block;
 }
 
 @media only screen and (min-width: 38em) {
